# DGPDemo

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
DGP/: CMakeLists.txt  EmbeddedCurve.cpp  EmbeddedCurve.h  GeometryTools.cpp  GeometryTools.h  RealizedEmbeddedCurve.cpp  mpviewer.cpp
DGP/algorithm/: CPCSurfaceUnfolding.cpp  CPCSurfaceUnfolding.h  DualQuaternion.h  TriangleStripUnfolding.h
DGP/algorithm/dualquat/: dualquat_base.h
DGP/apps/: EdgeLaplacianUnfolding.cpp
DGP/tests/: EmbeddedCurveTest.cpp
examples/: CMakeLists.txt
examples/301_fairing/: main.cpp
examples/302_smoothing/: CMakeLists.txt  energy_main.cpp  energy_smoothing.h  main.cpp  tangential_smoothing.h
examples/303_emcurve_fairing/: CMakeLists.txt  MinimalSeamCurve.h  main.cpp
examples/304_guided_filtering/: main.cpp
examples/401_voronoi_diagram/: CMakeLists.txt  voronoi.cpp  voronoi.h
examples/games102_hw7/: CMakeLists.txt  main.cpp
examples/games102_hw8/: CMakeLists.txt  ImageSampler.cpp  VoronoiApp.cpp  main.cpp  run.py
examples/games102_hw9/: CMakeLists.txt  SurfaceQEM.cpp  SurfaceQEM.h  SurfaceQEMSimplification.cpp  SurfaceQEMSimplification.h  VertexSplit.cpp  VertexSplit.h  main.cpp
include/pupa/pmp/: CPCSurfaceUnfolding.h  GeometryTools.h  MinimalAreaSurface.h  RealizedEmbeddedCurve.h  SurfaceCurvature.h
include/pupa/vis/: GLMaterial.h  GLVertexBuffer.h  MeshPrimitive.h  MeshViewer.h
src/: CMakeLists.txt
src/apps/: CMakeLists.txt  EdgeLaplacianUnfolding.cpp  EmbeddedIsolines.cpp  GLComponent.h  ManuallyRotateUnfolding.cpp  PupaMeshViewer.cpp  PupaPMPViewer.cpp
src/apps/games102/: 06_minimal_surf.h
src/games102_hw6/: CMakeLists.txt  main.cpp
src/pupa/: Common.cpp  MinimalAreaSurface.cpp  RealizedEmbeddedCurve.cpp
src/pupa/algorithm/: CPCSurfaceUnfolding.cpp
src/pupa/pmp/: EmCurveTools.h  RealizedEmCurve.cpp  RealizedEmCurve.h  SurfaceSeamCurve.cpp  SurfaceSeamCurve.h
src/pupa/pmp/smooth/: BilateralFiltering.cpp  BilateralFiltering.h  GuidedFiltering.cpp  GuidedFiltering.h
tests/: CMakeLists.txt
